--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -63,7 +63,7 @@
                                             <div class="pro-qty-2">
                                                 {{ item.update_quantity_form.quantity }}
                                             </div>
-                                                {{ item.update_quantity_form.override }}
+                                            {{ item.update_quantity_form.override }}
                                             {% csrf_token %}
                                         </form>
                                     </div>
@@ -72,16 +72,19 @@
                                 <td class="cart__price">${{ item.total_price }}</td>
                                 <td class="cart__close">
                                     <form action='{% url "cart:cart_remove" product.id %}' method="post">
-                                    <button type="submit" class="cart__close"><i class="fa fa-close"></i></button>
-                                    {% csrf_token %}
+                                        <button type="submit" class="cart__close"><i class="fa fa-close"></i></button>
+                                        {% csrf_token %}
                                     </form>
                                 </td>
                             </tr>
                             {% endwith %}
                             {% endfor %}
+
                         </tbody>
                     </table>
+
                 </div>
+
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-6">
                         <div class="continue__btn">
@@ -98,16 +101,46 @@
             <div class="col-lg-4">
                 <div class="cart__discount">
                     <h6>Discount codes</h6>
-                    <form action="#">
-                        <input type="text" placeholder="Coupon code">
+                    <form action="{% url 'coupons:apply' %}" method="post">
+                        {{ coupon_apply_form }}
                         <button type="submit">Apply</button>
+                        {% csrf_token %}
                     </form>
                 </div>
                 <div class="cart__total">
                     <h6>Cart total</h6>
                     <ul>
-                        <li>Total <span>$ {{ cart.get_total_price }}</span></li>
+                        <li>Total <span>$ {{ cart.get_total_price_after_discount }}</span></li>
                     </ul>
+                    {% if cart.coupon %}
+                    <ul>
+                        <li>Subtotal <span>$ {{ cart.get_total_price|floatformat:2 }}</span></li>
+                    </ul>
+                    <ul>
+                        {%with code=cart.coupon.code discount=cart.coupon.discount %}
+                        <li>"{{ code }}" coupon <span>$ ({{ discount }}% off)</span></li>
+                        {% endwith %}
+                    </ul>
+                    <ul>
+                        <li>discount <span>- ${{ cart.get_discount|floatformat:2 }}</span></li>
+                    </ul>
+                    
+                    {% endif %}
+                    
+                    {% if recommended_products %}
+                    <div class="recommendations cart">
+                        <h3>People who bought this also bought</h3>
+                        {% for p in recommended_products %}
+                        <div class="item">
+                            <a href="{{ p.get_absolute_url }}">
+                                <img src="{% if p.image %}{{ p.image.url }}{% else %}
+                                    {% static "img/no_image.png" %}{% endif %}">
+                            </a>
+                            <p><a href="{{ p.get_absolute_url }}">{{ p.title }}</a></p>
+                        </div>
+                        {% endfor %}
+                    </div>
+                    {% endif %}
                     <a href="{% url 'orders:order_create' %}" class="primary-btn">Proceed to checkout</a>
                 </div>
             </div>
