--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -44,9 +44,12 @@
                     <div class="col-lg-6 col-md-5">
                         <div class="header__top__right">
                             <div class="header__top__links">
-                                <a href="{% url 'users:login' %}">Log in</a>
-                                <a href="{% url 'users:signup' %}">Sing up</a>
-                                <a href="{% url 'apple_login' %}">Sign in with Apple</a>
+                                {% if request.user.is_authenticated %}
+                                <a href="{% url 'account_logout' %}">Log out</a>
+                                {% else %}
+                                <a href="{% url 'account_login' %}">Log in</a>
+                                {% endif %}
+                                <a href="{% url 'account_signup' %}">Sing up</a>
                                 {% if request.user.is_superuser %}
                                 <a href="/admin/">Admin</a>
                                 {% endif %}
